<resources>
    <string name="app_name">TodoApp</string>
    <string name="taskslist">tasksList</string>

    <string name="list" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language">Language :</string>
    <string name="mode">mode :</string>
    <string name="settings">Settings</string>
    <string name="add_new_task">Add New Task</string>
    <string name="enter_tittle">Enter Tittle</string>
    <string name="enter_description">Enter Description</string>
    <string name="select_date">Select Date</string>
    <string name="add_task">Add Task</string>
    <string-array name="language">
        <item>Language</item>
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="mode">
        <item>Mode</item>
        <item>Light Mode</item>
        <item>Dark Mode</item>
    </string-array>
</resources>