<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/lightPrimary"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/settings"
        android:textSize="30sp"
        style="@style/text_color"
        android:layout_margin="15dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/language_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_view"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/language"
        android:layout_margin="16dp"
        android:textSize="24sp"
        />
    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/language_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/language"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:drawSelectorOnTop="true"
        android:padding="13dp"
        style="@style/spinner_bg"



        />

    <TextView
        android:id="@+id/mode_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/language_spinner"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/mode"
        android:layout_margin="16dp"
        android:textSize="24sp"
        />
    <Spinner
        android:id="@+id/mode_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mode_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/mode"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:drawSelectorOnTop="true"
        android:padding="13dp"
        style="@style/spinner_bg"


        />
</androidx.constraintlayout.widget.ConstraintLayout>